...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_header_selector"
    tools:context="kmitl.finalproject.nattapon58070036.tapwinner.chatroom.ChatRoomActivity">
    <EditText
        android:id="@+id/et_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:maxLength="20"
        android:inputType="textPersonName"
        android:hint="@string/message"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="26dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btnSend"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="8dp" />

    <Button
...
